<resources>

    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="sign_up">Sign Up</string>
    <string name="user_name">Username</string>
    <string name="pass_word">Password</string>
    <string name="t1">Don\'t have an account yet?</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="userName">Guest??</string>
    <string name="title_activity_notes">Notes</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="NOTES">NOTES</string>
    <string name="title_note">Title</string>
    <string name="app_name">Melon AI</string>
    <string name="note_title">Untitled Note</string>
    <string name="title_hint">Untitled Note</string>
    <string name="note_hint">Start writing...</string>
    <string name="save_note">Save Note</string>
    <string name="deleteNote">Delete Note</string>
    <string name="title_activity_main_videocall">Sign in</string>
    <string name="help_support"><![CDATA[Help & Support]]></string>

    <string-array name="class_number">
        <item>All</item>
        <item>Air Conditioner</item>
        <item>Car horn</item>
        <item>Children Playing</item>
        <item>Dog Barking</item>
        <item>Drilling</item>
        <item>Engine Idlling</item>
        <item>Gun Shot</item>
        <item>Jackhammer</item>
        <item>Siren</item>
        <item>Street Music</item>

    </string-array>
</resources>
